[gd_scene load_steps=11 format=3 uid="uid://bek4shlabltka"]

[ext_resource type="PackedScene" uid="uid://dltqqwxjy00y4" path="res://scenes/DeathParticles.tscn" id="1"]
[ext_resource type="Script" path="res://scripts/Enemy.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://b4wkwh1vctavi" path="res://audio/sound/death/enemy.ogg" id="3"]
[ext_resource type="AudioStream" uid="uid://bcw7niniwp55n" path="res://audio/sound/hurt/enemy.wav" id="4"]
[ext_resource type="Texture2D" uid="uid://dpdvoc3aro50a" path="res://sprites/enemy1.png" id="5"]
[ext_resource type="AudioStream" uid="uid://b22vfs48ehvrm" path="res://audio/sound/ambient/basic_enemy.ogg" id="6"]
[ext_resource type="Texture2D" uid="uid://ckdvfwgtd7gth" path="res://sprites/enemy2.png" id="7"]

[sub_resource type="CircleShape2D" id="1"]
radius = 3.0

[sub_resource type="SpriteFrames" id="3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="2"]
radius = 20.0

[node name="BasicEnemy" type="CharacterBody2D" groups=["enemies", "flock"]]
collision_layer = 5
collision_mask = 5
script = ExtResource("2")
acceleration = 8.0
max_speed = 128.0
max_health = 1
damage = 1
attack_knockback = 256.0
flocking = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("3")
autoplay = "default"
frame_progress = 0.868932

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")
bus = &"Sound"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
volume_db = 1.0
bus = &"Sound"

[node name="AmbientSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")
volume_db = 1.0
max_distance = 512.0
attenuation = 2.0
bus = &"Sound"

[node name="DeathParticles" parent="." instance=ExtResource("1")]

[node name="SeparationArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SeparationArea"]
shape = SubResource("2")

[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
