[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/DeathParticles.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://audio/sound/death/enemy.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio/sound/hurt/enemy.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sound/ambient/basic_enemy.ogg" type="AudioStream" id=5]
[ext_resource path="res://sprites/splitter_enemy.png" type="Texture2D" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[node name="SplitterEnemy" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 2 )
acceleration = 1.0
max_speed = 128.0
max_health = 1
damage = 1
attack_knockback = 256.0
splitter = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource( 6 )
centered = false
offset = Vector2( -8, -8 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sound"

[node name="AmbientSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 1.0
max_distance = 100.0
attenuation = 2.0
bus = "Sound"

[node name="DeathParticles" parent="." instance=ExtResource( 1 )]

[node name="SplitTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
[connection signal="timeout" from="SplitTimer" to="." method="_on_SplitTimer_timeout"]
